samples/error/cursor_address.plis
const8 r0, 255
jump r0
end
